# aria-backend

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: coverage.yml  coverage.yml.bak  pylint.yml  python-test.yml  test.yml
src/aria_backend/: __init__.py  cli.py  extensions.py
src/aria_backend/articles/: api.py  models.py  services.py
src/aria_backend/scrapers/: api.py  models.py  services.py
tests/: conftest.py  test_articles_services.py  test_scrapers.py
tests/aria_backend/articles/: test_api.py  test_models.py  test_services.py
tests/aria_backend/scrapers/: test_models.py  test_services.py
