[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "aria_backend"
version = "0.1.0"
description = "Backend of ARIA project"
authors = ["mazzobeg"]
packages = [{ include = "aria_backend", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "1.13.1"
aniso8601 = "9.0.1"
appnope = "0.1.3"
attrs = "23.2.0"
backcall = "0.2.0"
beautifulsoup4 = "4.12.3"
blinker = "1.7.0"
bs4 = "0.0.2"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
click = "8.1.7"
colour = "0.1.5"
commonmark = "0.9.1"
coverage = "7.4.1"
distlib = "0.3.6"
dnspython = "2.6.1"
docopt = "0.6.2"
docutils = "0.20.1"
exceptiongroup = "1.2.0"
executing = "1.0.0"
flask = "3.0.1"
flask-cors = "4.0.0"
flask-migrate = "4.0.5"
flask-restx = "1.3.0"
flask-sqlalchemy = "3.1.1"
flit = "3.9.0"
flit-core = "3.9.0"
glcontext = "2.3.6"
idna = "3.6"
importlib-metadata = "7.0.1"
importlib-resources = "6.1.1"
iniconfig = "2.0.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.3"
jsonschema = "4.21.1"
jsonschema-specifications = "2023.12.1"
mako = "1.3.2"
markupsafe = "2.1.5"
mongoengine = "0.27.0"
mpmath = "1.2.1"
packaging = "23.2"
pdfkit = "0.6.1"
pickleshare = "0.7.5"
pluggy = "1.4.0"
ptyprocess = "0.7.0"
pure-eval = "0.2.2"
py = "1.11.0"
pyasn1 = "0.4.8"
pydub = "0.25.1"
pyglet = "1.5.26"
pymongo = "4.6.2"
pymsgbox = "1.0.9"
pyopengl = "3.1.6"
pypdf2 = "1.26.0"
pyperclip = "1.8.2"
pyrect = "0.2.0"
pyscreeze = "0.1.28"
pytest = "6.2.5"
pytest-pythonpath = "0.7.4"
pytweening = "1.0.4"
pytz = "2024.1"
referencing = "0.33.0"
requests = "2.31.0"
rpds-py = "0.17.1"
sortedcontainers = "2.4.0"
soupsieve = "2.5"
sqlalchemy = "2.0.25"
svgelements = "1.8.1"
sympy = "1.11.1"
tabulate = "0.9.0"
termcolor = "2.2.0"
toml = "0.10.2"
tomli = "2.0.1"
tomli-w = "1.0.0"
tqdm = "4.64.1"
traitlets = "5.4.0"
typing-extensions = "4.9.0"
uritemplate = "4.1.1"
urllib3 = "2.2.0"
wcwidth = "0.2.5"
werkzeug = "3.0.1"
zipp = "3.17.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[tool.pytest.ini_options]
python_paths = ["./src"]
requires-python = ">=3.9.0"

[tool.poetry.scripts]
aria-backend = "aria_backend.cli:main"
